# ci-github-action

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
src/: app.py
tests/: test_app.py
